--- a/AtividadeLista/app/src/main/res/values/strings.xml
+++ b/AtividadeLista/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AtividadeLista</string>
+    <string name="personagem">Personagem:</string>
+    <string name="idade">Idade:</string>
+    <string name="lista_de_personagens">Lista de Personagens</string>
 </resources>
